# TerminalChatGPT

./: .python-version  README.md  app.py  db.json  exemple.txt  pyproject.toml
